  test that all commands available to the test suite have help.
  (Robert Collins, #177500)

* Invalid patterns supplied to ``Globster`` or ``lazy_regex`` now raise
  ``InvalidPattern`` exception showing clear error message to the user.
  (Parth Malwankar #300062)

* Progress bars prefer to truncate the text message rather than the
  counters.  (Martin Pool)

* Progress output is cleaned up when exiting.  (Aaron Bentley)

* Raise ValueError instead of a string exception.
  (John Arbash Meinel, #586926)

* Relative imports in plugins are now handled correctly when using
  BZR_PLUGINS_AT. (Vincent Ladeuil, #588959)

* ``ScriptRunner`` now strips off leading indentation from test scripts,
  which previously caused "SyntaxError: No command for line".
  (Martin Pool)

* Show unicode filenames in diff headers using terminal encoding. 
  (Alexander Belchenko, Bug #382699)
  NOTE for Windows users: If user need to save diff to file then user need to
  change encoding of the terminal to ANSI encoding with command ``chcp XXX``
  (e.g. ``chcp 1251`` for Russian Windows).

* URL displayed for use with ``break-lock`` when smart server sees lock
  contention are now valid. Default timeout for lock contention retry is
  now 30 seconds instead of 300 seconds.
  (Parth Malwankar, #250451)

* ``walkdirs`` now raises a useful message when the filenames are not using
  the filesystem encoding. (Eric Moritz, #488519)

* Enable debugging of bzr on windows with pdb and other tools. This was 
  broken because we call GetCommandLineW on windows. The fix adjusts the 
  command line we get to be the same length as sys.argv.
  (Jason Spashett, Alexander Belchenko, #587868)

Improvements
************

* Bazaar now reads data from SSH connections more efficiently on platforms
  that provide the ``socketpair`` function, and when using paramiko.
  (Andrew Bennetts, #590637)

* ``Branch.copy_content_into`` is now a convenience method dispatching to